--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 
 [dependencies]
 deno_bindgen = { path = "../" }
+serde = { version = "1", feature = ["derive"] }
+serde_json = "1"
 
 [lib]
 name = "add"
