--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "deno_bindgen"
 version = "0.1.0"
+description = "This tool aims to simplify glue code generation for Deno FFI libraries written in Rust."
+license = "MIT"
 edition = "2018"
 
 [lib]
