--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -7,8 +7,7 @@ edition = "2018"
 
 [dependencies]
 deno_bindgen = { path = "../" }
-serde = { version = "1", feature = ["derive"] }
-serde_json = "1"
+serde = { version = "1", features = ["derive"] }
 
 [lib]
 name = "add"
