--- a/deno_bindgen/Cargo.toml
+++ b/deno_bindgen/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 path = "./lib.rs"
 
 [dependencies]
-deno_bindgen_macro = { path = "../deno_bindgen_macro" }
+deno_bindgen_macro = { path = "../deno_bindgen_macro", version = "0.2.0" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
