--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -1,14 +1,12 @@
 [package]
-name = "add"
+name = "deno_bindgen_test"
 version = "0.1.0"
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 deno_bindgen = { path = "../deno_bindgen/" }
 serde = { version = "1", features = ["derive"] }
 
 [lib]
-name = "add"
+name = "deno_bindgen_test"
 crate-type = ["cdylib"]
