--- a/deno_bindgen/Cargo.toml
+++ b/deno_bindgen/Cargo.toml
@@ -9,13 +9,13 @@ keywords = ["deno", "ffi", "bindgen", "bindings", "macro"]
 categories = ["development-tools::ffi", "development-tools"]
 readme = "../README.md"
 license = "MIT"
-edition = "2018"
+edition = "2021"
 
 [lib]
 path = "./lib.rs"
 
 [dependencies]
-deno_bindgen_macro = { path = "../deno_bindgen_macro", version = "0.4.1" }
+deno_bindgen_macro = { path = "../macro", version = "0.4.1" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
