--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -18,6 +18,8 @@ proc-macro = true
 proc-macro2 = "1"
 quote = "1"
 syn = { version = "1", features = ["full", "extra-traits"] }
-serde = { version = "1.0.59", features = ["derive"] }
-serde_json = "1.0.59"
+# serde = { version = "1.0.59", features = ["derive"] }
+# serde_json = "1.0.59"
 Inflector = "0.11.4"
+lazy_static = "1.4.0"
+deno_bindgen_codegen = { path = "../codegen" }
