--- a/codegen/Cargo.toml
+++ b/codegen/Cargo.toml
@@ -9,3 +9,7 @@ edition = "2021"
 anyhow = "1.0.52"
 Inflector = "0.11.4"
 indexmap = "1.8.0"
+serde = { version = "1.0", features = ["derive"], optional = true }
+
+[features]
+default = []
