--- a/deno_bindgen_macro/Cargo.toml
+++ b/deno_bindgen_macro/Cargo.toml
@@ -14,6 +14,10 @@ edition = "2018"
 [lib]
 proc-macro = true
 
+[package.metadata.docs.rs]
+# Disable generation of bindings.json metafile i.e. a no-op
+features = ["disable_metafile_generation"]
+
 [dependencies]
 proc-macro2 = "1"
 quote = "1"
