--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,7 @@ resolver = "2"
 members = [
   "deno_bindgen_macro",
   "deno_bindgen",
+  "deno_bindgen_ir",
+  "deno_bindgen_cli"
 ]
 exclude = ["example/"]
