--- a/deno_bindgen/Cargo.toml
+++ b/deno_bindgen/Cargo.toml
@@ -16,5 +16,7 @@ path = "./lib.rs"
 
 [dependencies]
 deno_bindgen_macro = { path = "../deno_bindgen_macro", version = "0.8.1" }
+deno_bindgen_ir = { path = "../deno_bindgen_ir", version = "0.1.0" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+linkme = "0.3"
