--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 [dependencies]
 deno_bindgen = { path = "../deno_bindgen/" }
 serde = { version = "1", features = ["derive"] }
+linkme = "0.3"
 
 [lib]
 name = "deno_bindgen_test"
