--- a/deno_bindgen_cli/Cargo.toml
+++ b/deno_bindgen_cli/Cargo.toml
@@ -19,3 +19,4 @@ path = "./main.rs"
 structopt = "0.3.26"
 deno_bindgen_ir = { path = "../deno_bindgen_ir", version = "0.1.0" }
 dlopen2 = "0.6.1"
+cargo_metadata = "0.18.1"
