--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -1,11 +1,4 @@
-edition = "2021"
 max_width = 80
 tab_spaces = 2
-unstable_features = true
-condense_wildcard_suffixes = true
-newline_style = "Unix"
-use_field_init_shorthand = true
-use_try_shorthand = true
-imports_granularity = "Crate"
-group_imports = "StdExternalCrate"
-reorder_imports = true
+edition = "2021"
+imports_granularity = "Item"
