--- a/deno_bindgen/Cargo.toml
+++ b/deno_bindgen/Cargo.toml
@@ -20,3 +20,6 @@ deno_bindgen_ir = { path = "../deno_bindgen_ir", version = "0.1.0" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 linkme = "0.3"
+
+[dev-dependencies]
+trybuild = "1.0.85"
