--- a/deno_bindgen_macro/Cargo.toml
+++ b/deno_bindgen_macro/Cargo.toml
@@ -22,3 +22,7 @@ serde = { version = "1.0.59", features = ["derive"] }
 serde_json = "1.0.59"
 Inflector = "0.11.4"
 deno_bindgen_ir = { path = "../deno_bindgen_ir", version = "0.1.0" }
+
+[dev-dependencies]
+prettyplease = "0.2.15"
+testing_macros = "0.2.11"
